# gamemyx

./: .gitignore  LICENSE.md  Makefile  README.md  build.cmd  build_mingw.cmd  build_msvc2019.cmd  build_next.cmd  build_win32.cmd  clean.cmd  config.h  mmap.h  mmap.inc  test.c  todo.txt
Data/: CMakeLists.txt  New_Year_Forest.tmx  New_Year_Home.tmx  build.cmd  control.tsx  map.tmx  park.tmx  stone.tmx  tiles.tsx  tiles_new.tsx
Data/16x16OutdoorsTileset/: link.txt
Data/BitPotion/: BitPotionExt.fnt  BitPotionExt_Black.fnt  link.txt
Data/Hearts/: link.txt
Data/MiniWorldSprites/: link.txt
Data/Music/: nq-MMA-ingame-28.pt3
Data/SereneVillage/: link.txt
Data/Tiles/: inside.tsx  link.txt  village.tsx
Engine/: Makefile  collision.c  engine.h  engine_p.h  interrupt.c  main.c  screen.c
Engine/AnimSprites/: _common.c  _private.h  _public.h  create.c  destroyall.c  load.c  put.c  putex.c  setonetime.c
Engine/Asserts/: _private.h  _public.h  fail.c  failbank.c
Engine/Collisions/: _common.c  _private.h  _public.h  add.c  setcallback.c  tilemap16x16.c
Engine/Core/: _common.c  _private.h  _public.h  cleanup.c  drawhud.c  main.c  registerhud.c  resethud.c
Engine/Dialogs/: _private.h  _public.h  dialogchoice.c  (+3 more)
Game/: Makefile  character.c  character.h  game.c  level.c  level.h  main.c  player.c  player.h  screen.c  swordsman.h
Importer/: CMakeLists.txt  Makefile  compile.cmd  font.c  image.c  importer.h  main.c  music.c  output.c  tilecache.c  tilemap.c  tileset.c  util.c
Importer/ezxml/: ezxml.c
MMapView/: CMakeLists.txt  main.c
Tools/: Makefile
(+3090 files in other folders)
